2007-01-06  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Require totem 1.4 for the custom_title parameter.

	* totem/plparser.override (_pl_parser_iter_func): Handle the new
	 (actually one year old but only noticed now) 'custom_title'
	parameter.

	* wnck/wnckmodule.c: Add missing prototype for pywnck_add_constants.

	* gnomeprint/__init__.py: Add a warning stating that gnomeprint is
	now deprecated in favour of cairo and gtk.

	* gnomeapplet/Makefile.am:
	* gnomedesktop/Makefile.am:
	* gnomekeyring/Makefile.am:
	* gtksourceview/Makefile.am:
	* mediaprofiles/Makefile.am:
	* metacity/Makefile.am:
	* nautilusburn/Makefile.am:
	* rsvg/Makefile.am:
	* totem/Makefile.am:
	* wnck/Makefile.am: Use --py_ssize_t-clean in codegen.

	* rsvg/rsvg.override: Py_ssize_t fixes.

	* configure.ac: Depend on PyGTK 2.10.3, for the new
	--py_ssize_t-clean option.

	* gtksourceview/gtksourceview.override
	(_wrap_gtk_source_language_tp_repr): Add custom tp_repr function
	that includes the language id. Closes #351567.

2007-01-06   Damien Carbery  <damien.carbery@sun.com>

	reviewed by: Gustavo Carneiro

	* gnomekeyring/gnomekeyringmodule.c: inline function
	pygnomekeyring_result_to_exception() in
	gnomekeyring/gnomekeyringmodule.c references static variables,
	which Sun's forte compiler does not like; remove the inline
	keyword. Closes #368364.

2007-01-05  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* metacity/metacity.defs (MenuOp): META_MENU_OP_UNABOVE removed,
	Closes #393198.

2007-01-03  Kjartan Maraas  <kmaraas@gnome.org>

	* metacity/metacity.c: Remove reference to META_MENU_OP_UNABOVE
	since that has been removed from metacity recently. Fixes build.

2006-12-24  Lukás Lalinský  <lalinsky@gmail.com>

	reviewed by: Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gnomekeyring/gnomekeyring-argtypes.py:
	* gnomekeyring/gnomekeyring.defs:
	* gnomekeyring/gnomekeyring.override:
	Bug 386366: implementation of gnomekeyring.find_items_sync.
