@@ -1,3 +1,10 @@
+2007-01-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* Makefile.am:
+	* bugbuddy.py:
+	* configure.ac: Install a new bugbuddy integration module; based
+	on code by Fernando Herrera.  Closes #346106.
+
 2007-01-06  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* configure.ac: Require totem 1.4 for the custom_title parameter.
